<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backroud"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8CACA"
        android:layout_marginTop="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/teal"
            android:textSize="40sp"
            android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center">


        <TextView
            android:id="@+id/staticWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:layout_weight="1"
            android:textColor="@color/teal"/>
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:textColor="@color/teal"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:onClick="logoutAct"
        android:background="@drawable/logout"/>
</LinearLayout>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:background="@color/white"
        android:layout_marginTop="120dp"
        android:rowCount="3">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:elevation="30dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
        <ImageView
            android:id="@+id/drawerred"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="30dp"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:src="@drawable/home"
            android:clickable="true"
            android:focusable="true"
            android:onClick="genredirect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Home"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:elevation="30dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/tabred"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:padding="30dp"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:src="@drawable/accountblk"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="genredirect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/More"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:elevation="30dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/listViw"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:padding="30dp"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:src="@drawable/settingsblack"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="genredirect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Set"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:elevation="30dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/qrred"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:padding="30dp"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:src="@drawable/share"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="genredirect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Share"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
    </RelativeLayout>

</ScrollView>